Closed Bug 1615830 Opened 6 years ago Closed 6 years ago

checkbox / radio inputs don't preserve aspect-ratio when non-native theming is enabled.

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

data:text/html,<input type=radio style="height: 30px"> shows a stretched radio button when native theming is disabled.

No other browser does this, they all enforce the size of the checkbox. This is breaking the layout of at least one website (my bank's website).

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Attachment #9126917 - Attachment description: Bug 1615830 - Don't allow checkboxes to grow over minimum size. r=spohl → Bug 1615830 - Don't allow checkboxes to loose aspect-ratio. r=spohl
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3b823d058ef5 Don't allow checkboxes to loose aspect-ratio. r=spohl
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
No longer blocks: 1381938
Blocks: 1615105
Depends on: 1620246
Depends on: 1620297
Depends on: 1620307
Depends on: 1620360
Depends on: 1620362
Depends on: 1620451

I don't know what's going on with bug clones :(

No longer depends on: 1620297, 1620307, 1620360, 1620362, 1620451, 1615026, 1620246
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: