Bug 1615830 - Don't allow checkboxes to loose aspect-ratio. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D63006