widget/nsNativeBasicTheme.cpp
@@ -134,6 +134,26 @@ static void ComputeCheckColors(const EventStates& aState,
   aBorderColor = borderColor;
 }
 
+// Checkbox and radio need to preserve aspect-ratio for compat.
+static Rect FixAspectRatio(const Rect& aRect) {
+  Rect rect(aRect);
+  if (rect.width == rect.height) {
+    return rect;
+  }
+
+  if (rect.width > rect.height) {
+    auto diff = rect.width - rect.height;
+    rect.width = rect.height;
+    rect.x += diff / 2;
+  } else {
+    auto diff = rect.height - rect.width;
+    rect.height = rect.width;
+    rect.y += diff / 2;
+  }
+
+  return rect;
+}
+
 static void PaintCheckboxControl(DrawTarget* aDrawTarget, const Rect& aRect,
                                  const EventStates& aState, uint32_t aDpi) {
   uint32_t radius = 3 * aDpi;
@@ -160,15 +180,17 @@ static void PaintCheckMark(DrawTarget* aDrawTarget, const Rect& aRect,
   const int32_t checkNumPoints = sizeof(checkPolygonX) / sizeof(float);
   const int32_t checkSize = 8;
 
+  auto center = aRect.Center();
+
   // Scale the checkmark based on the smallest dimension
   nscoord paintScale = std::min(aRect.width, aRect.height) / checkSize;
   RefPtr<PathBuilder> builder = aDrawTarget->CreatePathBuilder();
-  Point p = aRect.Center() +
+  Point p = center +
             Point(checkPolygonX[0] * paintScale, checkPolygonY[0] * paintScale);
   builder->MoveTo(p);
   for (int32_t polyIndex = 1; polyIndex < checkNumPoints; polyIndex++) {
-    p = aRect.Center() + Point(checkPolygonX[polyIndex] * paintScale,
-                               checkPolygonY[polyIndex] * paintScale);
+    p = center + Point(checkPolygonX[polyIndex] * paintScale,
+                       checkPolygonY[polyIndex] * paintScale);
     builder->LineTo(p);
   }
   RefPtr<Path> path = builder->Finish();
@@ -522,21 +544,25 @@ nsNativeBasicTheme::DrawWidgetBackground(gfxContext* aContext, nsIFrame* aFrame,
   uint32_t dpi = GetDPIRatio(aFrame);
 
   switch (aAppearance) {
-    case StyleAppearance::Radio:
-      PaintRadioControl(dt, devPxRect, eventState, dpi);
+    case StyleAppearance::Radio: {
+      auto rect = FixAspectRatio(devPxRect);
+      PaintRadioControl(dt, rect, eventState, dpi);
       if (IsSelected(aFrame)) {
-        PaintCheckedRadioButton(dt, devPxRect, dpi);
+        PaintCheckedRadioButton(dt, rect, dpi);
       }
       break;
-    case StyleAppearance::Checkbox:
-      PaintCheckboxControl(dt, devPxRect, eventState, dpi);
+    }
+    case StyleAppearance::Checkbox: {
+      auto rect = FixAspectRatio(devPxRect);
+      PaintCheckboxControl(dt, rect, eventState, dpi);
       if (IsChecked(aFrame)) {
-        PaintCheckMark(dt, devPxRect, eventState, dpi);
+        PaintCheckMark(dt, rect, eventState, dpi);
       }
       if (GetIndeterminate(aFrame)) {
-        PaintIndeterminateMark(dt, devPxRect, eventState);
+        PaintIndeterminateMark(dt, rect, eventState);
       }
       break;
+    }
     case StyleAppearance::Textarea:
     case StyleAppearance::Textfield:
     case StyleAppearance::NumberInput:
@@ -717,7 +743,7 @@ NS_IMETHODIMP
 nsNativeBasicTheme::GetMinimumWidgetSize(nsPresContext* aPresContext,
                                          nsIFrame* aFrame,
                                          StyleAppearance aAppearance,
-                                         mozilla::LayoutDeviceIntSize* aResult,
+                                         LayoutDeviceIntSize* aResult,
                                          bool* aIsOverridable) {
   aResult->width = aResult->height = 17 * GetDPIRatio(aFrame);
   *aIsOverridable = true;
